// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> renders board and overlay with move cursor if no tile 1`] = `
.emotion-01gtsv1y-Game {
  cursor: move;
  width: 100vw;
  height: 100vh;
}

<div
  className="emotion-0"
>
  <LoadingContainer
    size="large"
  />
  <Actions />
  <Memo(Overlay) />
  <SelectedTile />
</div>
`;

exports[`<Game /> renders board and overlay with move cursor if tile 1`] = `
.emotion-01gtsv1y-Game {
  cursor: move;
  width: 100vw;
  height: 100vh;
}

.emotion-0zeng4e-Game {
  cursor: -webkit-grabbing;
  cursor: grabbing;
  width: 100vw;
  height: 100vh;
}

<div
  className="emotion-0"
>
  <LoadingContainer
    size="large"
  />
  <Actions />
  <Memo(Overlay) />
  <SelectedTile />
</div>
`;

exports[`<Game /> renders board once it is loaded 1`] = `
.emotion-01gtsv1y-Game {
  cursor: move;
  width: 100vw;
  height: 100vh;
}

.emotion-0zeng4e-Game {
  cursor: -webkit-grabbing;
  cursor: grabbing;
  width: 100vw;
  height: 100vh;
}

<div
  className="emotion-0"
>
  <Memo(BoardWrapper) />
  <Actions />
  <Memo(Overlay) />
  <SelectedTile />
</div>
`;
